--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Menu</title>
-  <link rel="stylesheet" href="./assets/min-css/style.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
